log
Wed 19 Apr 2023 10:07:56 PM UTC: 
 tests:  1|8
total_score: 0/70
aa5b5be
Wed 19 Apr 2023 10:11:06 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:6: error: ‘TreeMap’ has no member named ‘size’
   41 |   map->size = 0;
      |      ^~
treemap.c:43:21: error: ‘lt’ undeclared (first use in this function)
   43 |   map->lower_than = lt;
      |                     ^~
treemap.c:43:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4f88050
Wed 19 Apr 2023 10:12:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:6: error: ‘TreeMap’ has no member named ‘size’
   41 |   map->size = 0;
      |      ^~
Compilation failed
9d6f2fa
